--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -56,7 +56,7 @@
         </tbody>
     </table>
     <p class="text-right">
-        <a href="{% url 'shop:product_list' %}" class="button light">Continue shopping</a>
-        <a href="{% url 'orders:order_create' %}" class="button">Checkout</a>
+        <a href="{% url 'shop:product_list' %}" class="button light">Продолжить покупки</a>
+        <a href="{% url 'orders:order_create' %}" class="button">Перейти к оформить заказа</a>
     </p>
 {% endblock %}
