--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -3,9 +3,9 @@
   Checkout
  {% endblock %}
  {% block content %}
-  <h1>Checkout</h1>
+  <h1>Заполните форму</h1>
   <div class="order-info">
-    <h3>Your order</h3>
+    <h3>Ваш заказ</h3>
     <ul>
       {% for item in cart %}
         <li>
@@ -14,11 +14,11 @@
         </li>
       {% endfor %}
     </ul>
-    <p>Total: {{ cart.get_total_price }}₸</p>
+    <p>Итогок к оплате: {{ cart.get_total_price }}₸</p>
   </div>
   <form method="post" class="order-form">
     {{ form.as_p }}
-    <p><input type="submit" value="Place order"></p>
+    <p><input type="submit" value="Оформить заказ"></p>
     {% csrf_token %}
   </form>
  {% endblock %}
