--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -57,6 +57,6 @@
     </table>
     <p class="text-right">
         <a href="{% url 'shop:product_list' %}" class="button light">Продолжить покупки</a>
-        <a href="{% url 'orders:order_create' %}" class="button">Перейти к оформить заказа</a>
+        <a href="{% url 'orders:order_create' %}" class="button">Перейти к оформлению заказа</a>
     </p>
 {% endblock %}
