--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -1,13 +1,13 @@
- {% extends "shop/base.html" %}
- {% block title %}
-  Checkout
- {% endblock %}
- {% block content %}
-  <h1>Заполните форму</h1>
-  <div class="order-info">
-    <h3>Ваш заказ</h3>
-    <ul>
-      {% for item in cart %}
+{% extends "shop/base.html" %}
+{% block title %}
+    Форма заполнения
+{% endblock %}
+{% block content %}
+<h1>Заполните форму</h1>
+    <div class="order-info">
+        <h3>Ваш заказ</h3>
+        <ul>
+            {% for item in cart %}
         <li>
           {{ item.quantity }}x {{ item.product.name }}
           <span>{{ item.total_price }}₸</span>
@@ -16,9 +16,9 @@
     </ul>
     <p>Итогок к оплате: {{ cart.get_total_price }}₸</p>
   </div>
-  <form method="post" class="order-form">
-    {{ form.as_p }}
-    <p><input type="submit" value="Оформить заказ"></p>
-    {% csrf_token %}
+    <form method="post" class="order-form">
+        {{ form.as_p }}
+  <p><input type="submit" value="Оформить заказ"></p>
+      {% csrf_token %}
   </form>
- {% endblock %}
+{% endblock %}
