На этом пока всё

--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -21,8 +21,11 @@
              {% for item in order.items.all %}
                 <tr class="row{% cycle '1' '2' %}">
                     <td>
-                        <img src="{% if item.product.image %}{{ item.product.image.url }}
-                        {% else %}{% static 'img/no_image.png' %}{% endif %}">
+                        <img src="{% if item.product.image %}
+                                        {{ item.product.image.url }}
+                                {% else %}
+                                    {% static 'img/no_image.png' %}
+                                {% endif %}">
                     </td>
                     <td>{{ item.product.name }}</td>
                     <td class="num">{{ item.price }}₸</td>
@@ -36,9 +39,9 @@
                 </tr>
         </tbody>
     </table>
- <form action="{% url 'payment:process' %}" method="post">
- <input type="submit" value="Оплатить">
-    {% csrf_token %}
- </form>
+    <form action="{% url 'payment:process' %}" method="post">
+        <input type="submit" value="Оплатить">
+            {% csrf_token %}
+    </form>
 
 {% endblock %}
